--- a/pages/18773.html
+++ b/pages/18773.html
@@ -907,7 +907,7 @@ margin-left: 0em;
 <p>While highly succesful, the conceptual nature of the original formulation, in particular of the process of <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a> (“removal of <a class='existingWikiWord' href='/nlab/show/ultraviolet+divergence'>UV-divergences</a>”), had remained mysterious. In <a href='#Feynman85'>Feynman 85, Chap. 4. “Loose Ends”</a> it still says:</p>
 
 <blockquote>
-<p id='Feynman85SuchABunchOfWords'> …is technically called ‘renormalization.’ But no matter how clever the word, it is what I would call a dippy process! Having to resort to such hocus-pocus has prevented us from proving that the theory <math class='maruku-mathml' display='inline' id='mathml_2cec3d1c99c3f6c6fb52753ee4969bb63331c49b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[...]</annotation></semantics></math> is self-consistent. It’s surprising that the theory still hasn’t been proved self-consistent one way or the other by now; <math class='maruku-mathml' display='inline' id='mathml_2cec3d1c99c3f6c6fb52753ee4969bb63331c49b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[...]</annotation></semantics></math> What is certain is that we do not have a good mathematical way to describe the theory of quantum electrodynamics: such a bunch of words… (<a href='#Feynman85'>Feynman 85, Chap. 4. “Loose Ends”</a>)</p>
+<p id='Feynman85SuchABunchOfWords'> …is technically called ‘renormalization.’ But no matter how clever the word, it is what I would call a dippy process! Having to resort to such hocus-pocus has prevented us from proving that the theory <math class='maruku-mathml' display='inline' id='mathml_da9bf1dde2c98c485134d1999cdfa52158ca5d00_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[...]</annotation></semantics></math> is self-consistent. It’s surprising that the theory still hasn’t been proved self-consistent one way or the other by now; <math class='maruku-mathml' display='inline' id='mathml_da9bf1dde2c98c485134d1999cdfa52158ca5d00_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[...]</annotation></semantics></math> What is certain is that we do not have a good mathematical way to describe the theory of quantum electrodynamics: such a bunch of words… (<a href='#Feynman85'>Feynman 85, Chap. 4. “Loose Ends”</a>)</p>
 </blockquote>
 
 <p>These conceptial mysteries were later resolved in a mathematically rigorous formulation of <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a> in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> on <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> by (<a href='perturbative+quantum+field+theory#EpsteinGlaser73'>Epstein-Glaser 73</a>), based on (<a href='perturbative+quantum+field+theory#BogoliubovShirkov59'>Bogoliubov-Shirkov 59</a> and <a href='perturbative+quantum+field+theory#Stueckelberg51'>Stückelberg 51</a>), now known as <em><a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a></em> and <em><a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative algebraic quantum field theory</a></em>; laid out, together with other rigorous approaches, in the seminal Erice summer school proceedings (<a href='perturbative+quantum+field+theory#VeloWightman76'>Velo-Wightman 76</a>).</p>
@@ -936,14 +936,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on November 12, 2017 11:50:50 
+  Revised on January  6, 2018 08:03:07 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.55.151)
+  (178.9.120.196)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Schwinger-Tomonaga-Feynman-Dyson" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Schwinger-Tomonaga-Feynman-Dyson" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Schwinger-Tomonaga-Feynman-Dyson/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Schwinger-Tomonaga-Feynman-Dyson" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Schwinger-Tomonaga-Feynman-Dyson" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
