--- a/pages/18912.html
+++ b/pages/18912.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Gaussian integral in nLab
+      Gaussian measure in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Gaussian integral
+      Gaussian measure
   </h1>
 
 
@@ -312,45 +312,109 @@ margin-left: 0em;
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
-<h4 id='integration_theory'>Integration theory</h4>
+<h4 id='measure_and_probability_theory'>Measure and probability theory</h4>
 
 <div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/integral'>integration</a></strong></p>
-<table><thead><tr><th>analytic integration</th><th>cohomological integration</th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/measurable+space'>measurable space</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+duality'>Poincaré duality</a></td></tr>
-<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/measure+space'>measure</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/orientation+in+generalized+cohomology'>orientation in generalized cohomology</a></td></tr>
-<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/volume+form'>volume form</a></td><td style='text-align: left;'>(<a class='existingWikiWord' href='/nlab/show/virtual+fundamental+class'>virtual</a>) <a class='existingWikiWord' href='/nlab/show/fundamental+class'>fundamental class</a></td></tr>
-<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Riemann+integration'>Riemann</a>/<a class='existingWikiWord' href='/nlab/show/Lebesgue+integration'>Lebesgue integration</a> <a class='existingWikiWord' href='/nlab/show/integration+of+differential+forms'>of differential forms</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/fiber+integration'>push-forward in generalized cohomology</a>/<a class='existingWikiWord' href='/nlab/show/fiber+integration+in+differential+cohomology'>in differential cohomology</a></td></tr>
-</tbody></table>
-<h2 id='analytic_integration'>Analytic integration</h2>
+<p><strong><a class='existingWikiWord' href='/nlab/show/measure+theory'>measure theory</a></strong></p>
 
-<p><a class='existingWikiWord' href='/nlab/show/integral+calculus'>integral calculus</a></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/probability+theory'>probability theory</a></strong></p>
 
-<p><a class='existingWikiWord' href='/nlab/show/Riemann+integration'>Riemann integration</a>, <a class='existingWikiWord' href='/nlab/show/Lebesgue+integration'>Lebesgue integration</a></p>
+<h2 id='measure_theory'>Measure theory</h2>
 
-<p><a class='existingWikiWord' href='/nlab/show/line+integral'>line integral</a>/<a class='existingWikiWord' href='/nlab/show/line+integral'>contour integration</a></p>
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/measurable+space'>measurable space</a>, <a class='existingWikiWord' href='/nlab/show/measurable+locale'>measurable locale</a></p>
+</li>
 
-<p><a class='existingWikiWord' href='/nlab/show/integration+of+differential+forms'>integration of differential forms</a></p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/measure+space'>measure</a>, <a class='existingWikiWord' href='/nlab/show/measure+space'>measure space</a></p>
+</li>
 
-<p><a class='existingWikiWord' href='/nlab/show/integration+over+supermanifolds'>integration over supermanifolds</a>, <a class='existingWikiWord' href='/nlab/show/Berezin+integral'>Berezin integral</a>, <a class='existingWikiWord' href='/nlab/show/fermionic+path+integral'>fermionic path integral</a></p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a></p>
+</li>
 
-<p><a class='existingWikiWord' href='/nlab/show/Kontsevich+integral'>Kontsevich integral</a>, <a class='existingWikiWord' href='/nlab/show/Selberg+integral'>Selberg integral</a>, <a class='existingWikiWord' href='/nlab/show/elliptic+Selberg+integral'>elliptic Selberg integral</a></p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+measure+theory'>geometric measure theory</a></p>
+</li>
+</ul>
 
-<h2 id='cohomological_integration'>Cohomological integration</h2>
+<h2 id='probability_theory'>Probability theory</h2>
 
-<p><a class='existingWikiWord' href='/nlab/show/fiber+integration+in+ordinary+differential+cohomology'>integration in ordinary differential cohomology</a></p>
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a></p>
+</li>
 
-<p><a class='existingWikiWord' href='/nlab/show/fiber+integration+in+differential+K-theory'>integration in differential K-theory</a></p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability distribution</a></p>
+</li>
 
-<p><a class='existingWikiWord' href='/nlab/show/Grothendieck-Riemann-Roch+theorem'>Riemann-Roch theorem</a></p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/state'>state</a></p>
 
-<h2 id='variants'>Variants</h2>
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>in AQFT and operator algebra</a></p>
+</li>
 
-<p><a class='existingWikiWord' href='/nlab/show/Lie+integration'>Lie integration</a></p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gelfand-Naimark-Segal+construction'>GNS construction</a></p>
+</li>
 
-<p><a class='existingWikiWord' href='/nlab/show/path+integral'>path integral</a></p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fell%27s+theorem'>Fell&#39;s theorem</a></p>
+</li>
+</ul>
+</li>
 
-<p><a class='existingWikiWord' href='/nlab/show/Batalin-Vilkovisky+integral'>Batalin-Vilkovisky integral</a></p>
-</div>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/entropy'>entropy</a>, <a class='existingWikiWord' href='/nlab/show/relative+entropy'>relative entropy</a></p>
+</li>
+</ul>
+
+<h2 id='information_geometry'>Information geometry</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/information+geometry'>information geometry</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/information+metric'>information metric</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wasserstein+metric'>Wasserstein metric</a></p>
+</li>
+</ul>
+
+<h2 id='thermodynamics'>Thermodynamics</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/thermodynamics'>thermodynamics</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/second+law+of+thermodynamics'>second law of thermodynamics</a>, <a class='existingWikiWord' href='/nlab/show/generalized+second+law+of+thermodynamics'>generalized second law</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ergodic+theory'>ergodic theory</a></p>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Riesz+representation+theorem'>Riesz representation theorem</a></li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/measure+theory+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
 </div>
 </div>
 
@@ -358,22 +422,18 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Gaussian+measure'>Gaussian measure</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Gaussian+integral'>Gaussian integral</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/free+field+theory'>free field theory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/vacuum+energy'>vacuum energy</a></p>
 </li>
 </ul>
 
 <h2 id='references'>References</h2>
 
 <ul>
-<li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Gaussian_integral'>Gaussian integral</a></em></li>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Gaussian_measure'>Gaussian measure</a></em></li>
 </ul>
 
 <p>
@@ -381,22 +441,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  6, 2018 08:47:37 
+  Created on January  6, 2018 08:46:53 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (178.9.120.196)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gaussian+integral" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gaussian+integral/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Gaussian+integral" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gaussian+integral" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Gaussian+measure" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Gaussian+integral" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Gaussian+measure" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Gaussian+integral" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Gaussian+measure" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Gaussian+integral" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Gaussian+measure" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
