--- a/pages/4061.html
+++ b/pages/4061.html
@@ -904,7 +904,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#classical_mathematical_physics'>Classical mathematical physics</a></li><li><a href='#classical_mechanics'>Classical mechanics</a></li><li><a href='#mathematical_introduction_to_quantum_mechanics'>Mathematical introduction to quantum mechanics</a></li><li><a href='#geometry_and_symmetries_in_classical_and_qm_quantization_but_no_qft'>Geometry and symmetries in classical and QM, quantization (but no QFT)</a></li><li><a href='#lorentzian_geometry_and_general_relativity'>Lorentzian geometry and general relativity</a></li><li><a href='#integrable_systems_and_solitons'>Integrable systems and solitons</a></li><li><a href='#modern_mathematical_approaches_to_qft_and_strings'>Modern mathematical approaches to QFT and strings</a><ul><li><a href='#branes_mathematical_aspects'>Branes (mathematical aspects)</a></li></ul></li><li><a href='#conformal_field_theory_and_vertex_algebras'>Conformal field theory and vertex algebras</a></li><li><a href='#axiomatic_quantumstatistical_field_theory_and_rigorous_approaches_to_path_integral'>Axiomatic quantum/statistical field theory and rigorous approaches to path integral</a></li><li><a href='#other_reference_lists'>Other reference lists</a></li></ul></div>
 <h2 id='classical_mathematical_physics'>Classical mathematical physics</h2>
 
-<p>Here PDEs, <a class='existingWikiWord' href='/nlab/show/differential+equation'>ODE</a>s, and integral equation of mathematical physics, special functions, <a class='existingWikiWord' href='/nlab/show/distribution'>generalized function</a>s, analytic functions, basic <a class='existingWikiWord' href='/nlab/show/functional+analysis'>functional analysis</a>, potential theory:</p>
+<p>Here PDEs, <a class='existingWikiWord' href='/nlab/show/differential+equation'>ODE</a>s, and integral equation of mathematical physics, special functions, <a class='existingWikiWord' href='/nlab/show/generalized+function'>generalized function</a>s, analytic functions, basic <a class='existingWikiWord' href='/nlab/show/functional+analysis'>functional analysis</a>, potential theory:</p>
 
 <ul>
 <li>
@@ -1102,7 +1102,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Eberhard Zeidler, <em>Quantum field theory. A bridge between mathematicians and physicists</em>. I: Basics in mathematics and physics. , II: Quantum electrodynamics</p>
+<p><a class='existingWikiWord' href='/nlab/show/Eberhard+Zeidler'>Eberhard Zeidler</a>, <em>Quantum field theory. A bridge between mathematicians and physicists</em>. I: Basics in mathematics and physics. , II: Quantum electrodynamics</p>
+</li>
+
+<li id='HenneauxTeitelboim'>
+<p><a class='existingWikiWord' href='/nlab/show/Marc+Henneaux'>Marc Henneaux</a>, <a class='existingWikiWord' href='/nlab/show/Claudio+Teitelboim'>Claudio Teitelboim</a>, <em><a class='existingWikiWord' href='/nlab/show/Quantization+of+Gauge+Systems'>Quantization of Gauge Systems</a></em>, Princeton University Press 1992.</p>
 </li>
 
 <li>
@@ -1154,11 +1158,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Hisham Sati, <a class='existingWikiWord' href='/nlab/show/Geometric+and+topological+structures+related+to+M-branes'>Geometric and topological structures related to M-branes</a>, part I (<a href='http://arXiv.org/abs/1001.5020'>arXiv:1001.5020</a>), part <em>II: Twisted <math class='maruku-mathml' display='inline' id='mathml_b1ee8be9125a5a713d079d0bf593df63827dfc1a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>String</mi></mrow><annotation encoding='application/x-tex'>String</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_b1ee8be9125a5a713d079d0bf593df63827dfc1a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>String</mi> <mi>c</mi></msup></mrow><annotation encoding='application/x-tex'>String^c</annotation></semantics></math> structures</em> (<a href='http://arxiv.org/abs/1007.5419'>arxiv/1007.5419</a>); part <em>III: Twisted higher structures</em> (<a href='http://arxiv.org/abs/1008.1755'>http://arxiv.org/abs/1008.1755</a>)</p>
+<p>Hisham Sati, <a class='existingWikiWord' href='/nlab/show/Geometric+and+topological+structures+related+to+M-branes'>Geometric and topological structures related to M-branes</a>, part I (<a href='http://arXiv.org/abs/1001.5020'>arXiv:1001.5020</a>), part <em>II: Twisted <math class='maruku-mathml' display='inline' id='mathml_1fdc32c4afde7b4feb5737777ce12d7e3edcae1c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>String</mi></mrow><annotation encoding='application/x-tex'>String</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_1fdc32c4afde7b4feb5737777ce12d7e3edcae1c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>String</mi> <mi>c</mi></msup></mrow><annotation encoding='application/x-tex'>String^c</annotation></semantics></math> structures</em> (<a href='http://arxiv.org/abs/1007.5419'>arxiv/1007.5419</a>); part <em>III: Twisted higher structures</em> (<a href='http://arxiv.org/abs/1008.1755'>http://arxiv.org/abs/1008.1755</a>)</p>
 </li>
 
 <li>
-<p>A. N. Kapustin, <a class='existingWikiWord' href='/nlab/show/Dmitri+Orlov'>D. O. Orlov</a>, <em>Lectures on mirror symmetry, derived categories, and <math class='maruku-mathml' display='inline' id='mathml_b1ee8be9125a5a713d079d0bf593df63827dfc1a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math>-branes</em>, Russian Mathematical Surveys, 2004, 59:5, 907–940 (Russian version: <a href='http://www.mathnet.ru/php/getFT.phtml?jrnid=rm&amp;paperid=772&amp;volume=59&amp;year=2004&amp;issue=5&amp;fpage=101&amp;what=fullt&amp;option_lang=eng'>pdf</a>, [arxiv version: arxiv:math.AG/0308173).]</p>
+<p>A. N. Kapustin, <a class='existingWikiWord' href='/nlab/show/Dmitri+Orlov'>D. O. Orlov</a>, <em>Lectures on mirror symmetry, derived categories, and <math class='maruku-mathml' display='inline' id='mathml_1fdc32c4afde7b4feb5737777ce12d7e3edcae1c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math>-branes</em>, Russian Mathematical Surveys, 2004, 59:5, 907–940 (Russian version: <a href='http://www.mathnet.ru/php/getFT.phtml?jrnid=rm&amp;paperid=772&amp;volume=59&amp;year=2004&amp;issue=5&amp;fpage=101&amp;what=fullt&amp;option_lang=eng'>pdf</a>, [arxiv version: arxiv:math.AG/0308173).]</p>
 </li>
 </ul>
 
@@ -1275,14 +1279,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 12, 2016 19:50:23 
+  Revised on January  6, 2018 17:29:29 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.139.94)
+  (84.63.72.123)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/books+and+reviews+in+mathematical+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/books+and+reviews+in+mathematical+physics/39" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(39 revisions)</span> | <a href="/nlab/show/diff/books+and+reviews+in+mathematical+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/books+and+reviews+in+mathematical+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/books+and+reviews+in+mathematical+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/books+and+reviews+in+mathematical+physics/40" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(40 revisions)</span> | <a href="/nlab/show/diff/books+and+reviews+in+mathematical+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/books+and+reviews+in+mathematical+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
