--- a/pages/15369.html
+++ b/pages/15369.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -784,12 +784,12 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>Given a <a class='existingWikiWord' href='/nlab/show/metric+space'>metric space</a> <math class='maruku-mathml' display='inline' id='mathml_a0f58859c28b7394e5d1c85ab5113b996025537e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,d)</annotation></semantics></math>, the <em>metric topology</em> on <math class='maruku-mathml' display='inline' id='mathml_a0f58859c28b7394e5d1c85ab5113b996025537e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is the structure of a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> on <math class='maruku-mathml' display='inline' id='mathml_a0f58859c28b7394e5d1c85ab5113b996025537e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> which is generated from the <a class='existingWikiWord' href='/nlab/show/topological+base'>basis of a topology</a> given by the <a class='existingWikiWord' href='/nlab/show/ball'>open balls</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_a0f58859c28b7394e5d1c85ab5113b996025537e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>r</mi><mo stretchy='false'>)</mo><mo>≔</mo><mo stretchy='false'>{</mo><mi>x</mi><mo>∈</mo><mi>X</mi><mspace width='thickmathspace'></mspace><mo stretchy='false'>|</mo><mspace width='thickmathspace'></mspace><mi>d</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo><mo>&lt;</mo><mi>r</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>
-  B(x,r) \coloneqq \{x \in X \;|\; d(x,y) \lt r \}
+<p>Given a <a class='existingWikiWord' href='/nlab/show/metric+space'>metric space</a> <math class='maruku-mathml' display='inline' id='mathml_7eca645926fa5f64a4cf2196893980dea32b77be_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,d)</annotation></semantics></math>, the <em>metric topology</em> on <math class='maruku-mathml' display='inline' id='mathml_7eca645926fa5f64a4cf2196893980dea32b77be_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is the structure of a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> on <math class='maruku-mathml' display='inline' id='mathml_7eca645926fa5f64a4cf2196893980dea32b77be_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> which is generated from the <a class='existingWikiWord' href='/nlab/show/topological+base'>basis of a topology</a> given by the <a class='existingWikiWord' href='/nlab/show/ball'>open balls</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_7eca645926fa5f64a4cf2196893980dea32b77be_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>r</mi><mo stretchy='false'>)</mo><mo>≔</mo><mo stretchy='false'>{</mo><mi>y</mi><mo>∈</mo><mi>X</mi><mspace width='thickmathspace'></mspace><mo stretchy='false'>|</mo><mspace width='thickmathspace'></mspace><mi>d</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo><mo>&lt;</mo><mi>r</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>
+  B(x,r) \coloneqq \{y \in X \;|\; d(x,y) \lt r \}
 
 </annotation></semantics></math></div>
-<p>for all <math class='maruku-mathml' display='inline' id='mathml_a0f58859c28b7394e5d1c85ab5113b996025537e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>∈</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>x \in X</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_a0f58859c28b7394e5d1c85ab5113b996025537e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>r</mi><mo>∈</mo><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mn>∞</mn><mo stretchy='false'>)</mo><mo>⊂</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>r \in (0,\infty) \subset \mathbb{R}</annotation></semantics></math>.</p>
+<p>for all <math class='maruku-mathml' display='inline' id='mathml_7eca645926fa5f64a4cf2196893980dea32b77be_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>∈</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>x \in X</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_7eca645926fa5f64a4cf2196893980dea32b77be_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>r</mi><mo>∈</mo><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mn>∞</mn><mo stretchy='false'>)</mo><mo>⊂</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>r \in (0,\infty) \subset \mathbb{R}</annotation></semantics></math>.</p>
 
 <p>A topological space whose topology is the metric topology for some <a class='existingWikiWord' href='/nlab/show/metric+space'>metric space</a> structure on its underlying set is called a <em><a class='existingWikiWord' href='/nlab/show/metrisable+topological+space'>metrizable topological space</a></em>.</p>
 
@@ -804,14 +804,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June 21, 2017 04:25:17 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.220.184.222)
+  Revised on January  7, 2018 01:52:50 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (46.166.88.132)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/metric+topology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/metric+topology/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/metric+topology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/metric+topology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/metric+topology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/metric+topology/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/metric+topology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/metric+topology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
