--- a/pages/18914.html
+++ b/pages/18914.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      master Ward identity in nLab
+      master Ward identity &gt; history in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      master Ward identity
+      master Ward identity &gt; history
   </h1>
 
 
@@ -308,51 +308,28 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>For a <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a>, the <em>classical Ward identity</em> is an <a class='existingWikiWord' href='/nlab/show/shell'>on-shell</a> <a class='existingWikiWord' href='/nlab/show/equation'>equation</a> satisfied by classical <a class='existingWikiWord' href='/nlab/show/observable'>observables</a> due to <a class='existingWikiWord' href='/nlab/show/symmetry'>symmetries</a> of the <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a>. For quantum observables it is not automatic, but one may consider imposing it as a constraint on the choice of <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>. As such it is called the <em>quantum master Ward identity</em> (really a condition). It is closely related to the <a class='existingWikiWord' href='/nlab/show/Schwinger-Dyson+equation'>Schwinger-Dyson equation</a>.</p>
-
-<h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Schwinger-Dyson+equation'>Schwinger-Dyson equation</a></li>
-</ul>
-
-<h2 id='references'>References</h2>
-
-<ul>
-<li id='DuetschFredenhagen02'>
-<p><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, <a class='existingWikiWord' href='/nlab/show/Klaus+Fredenhagen'>Klaus Fredenhagen</a>, <em>The Master Ward Identity and Generalized Schwinger-Dyson Equation in Classical Field Theory</em>, Commun.Math.Phys. 243 (2003) 275-314 (<a href='https://arxiv.org/abs/hep-th/0211242'>arXiv:hep-th/0211242</a>)</p>
-</li>
-
-<li id='Duetsch18'>
-<p><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, chapter 4 of <em><a class='existingWikiWord' href='/nlab/show/From+classical+field+theory+to+perturbative+quantum+field+theory'>From classical field theory to perturbative quantum field theory</a></em>, 2018</p>
-</li>
-</ul>
-
-<p>
-</p>
+    <blockquote>
+<p>see at <em><a class='existingWikiWord' href='/nlab/show/Ward+identity'>Ward identity</a></em></p>
+</blockquote>
 </div>
 
 <div class="revisedby">
-  Revised on January  7, 2018 04:57:17 
+  Revised on January  7, 2018 05:02:16 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (84.63.72.123)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/master+Ward+identity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/master+Ward+identity/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/master+Ward+identity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/master+Ward+identity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/master+Ward+identity+%3E+history" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/master+Ward+identity+%3E+history/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/master+Ward+identity+%3E+history" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/master+Ward+identity+%3E+history" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/master+Ward+identity" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/master+Ward+identity+%3E+history" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/master+Ward+identity" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/master+Ward+identity+%3E+history" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/master+Ward+identity" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/master+Ward+identity+%3E+history" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
