--- a/pages/10374.html
+++ b/pages/10374.html
@@ -308,14 +308,367 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>
-</p>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='algebraic_quantum_field_theory'>Algebraic Quantum Field Theory</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic quantum field theory</a></strong> (<a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative</a>, <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>on curved spacetimes</a>, <a class='existingWikiWord' href='/nlab/show/homotopical+algebraic+quantum+field+theory'>homotopical</a>)</p>
+
+<h2 id='concepts'>Concepts</h2>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical</a>, <a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>pre-quantum</a>, <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum</a></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+history'>field history</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+variational+field+theory'>locally variational field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+quantization'>geometric quantization</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/deformation+quantization'>algebraic deformation quantization</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/observable'>observables</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+observable'>field observable</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/local+observable'>local observables</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/polynomial+observable'>polynomial observables</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/microcausal+polynomial+observable'>microcausal observables</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/operator+algebra'>operator algebra</a>, <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C*-algebra</a>, <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local net of observables</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+locality'>causal locality</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Haag-Kastler+axioms'>Haag-Kastler axioms</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wightman+axioms'>Wightman axioms</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+net'>field net</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/conformal+net'>conformal net</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on a star-algebra</a>, <a class='existingWikiWord' href='/nlab/show/quantum+probability'>quantum probability</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/pure+state'>pure state</a>, <a class='existingWikiWord' href='/nlab/show/pure+state'>mixed state</a>, <a class='existingWikiWord' href='/nlab/show/density+matrix'>density matrix</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/space+of+states+%28in+geometric+quantization%29'>space of quantum states</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasi-free+quantum+state'>quasi-free state</a>,</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a></p>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/picture+of+mechanics'>picture of quantum mechanics</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/free+field'>free field</a> <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/star-algebra'>star algebra</a>, <a class='existingWikiWord' href='/nlab/show/Moyal+deformation+quantization'>Moyal deformation quantization</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/canonical+commutation+relation'>canonical commutation relations</a>, <a class='existingWikiWord' href='/nlab/show/Weyl+relation'>Weyl relations</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal ordered product</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fock+space'>Fock space</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/interaction'>interacting</a> field <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a>, <a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>scattering amplitude</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+additivity'>causal additivity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/time-ordered+product'>time-ordered product</a>, <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>, <a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+scheme'>renormalization scheme</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gell-Mann-Low+renormalization+cocycle'>Gell-Mann-Low renormalization cocycle</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra'>interacting field algebra</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></li>
+</ul>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<h3 id='states_and_observables'>States and observables</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/order-theoretic+structure+in+quantum+mechanics'>order-theoretic structure in quantum mechanics</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Alfsen-Shultz+theorem'>Alfsen-Shultz theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Harding-D%C3%B6ring-Hamhalter+theorem'>Harding-Döring-Hamhalter theorem</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Kochen-Specker+theorem'>Kochen-Specker theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bell%27s+theorem'>Bell&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fell%27s+theorem'>Fell&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gleason%27s+theorem'>Gleason&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wigner+theorem'>Wigner theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bub-Clifton+theorem'>Bub-Clifton theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Kadison-Singer+problem'>Kadison-Singer problem</a></p>
+</li>
+</ul>
+
+<h3 id='operator_algebra'>Operator algebra</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wick%27s+lemma'>Wick&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gelfand-Naimark-Segal+construction'>GNS construction</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/cyclic+vector'>cyclic vector</a>, <a class='existingWikiWord' href='/nlab/show/separating+vector'>separating vector</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/modular+theory'>modular theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fell%27s+theorem'>Fell&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Stone-von+Neumann+theorem'>Stone-von Neumann theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Haag%27s+theorem'>Haag&#39;s theorem</a></p>
+</li>
+</ul>
+
+<h3 id='local_qft'>Local QFT</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Reeh-Schlieder+theorem'>Reeh-Schlieder theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bisognano-Wichmann+theorem'>Bisognano-Wichmann theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/PCT+theorem'>PCT theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spin-statistics+theorem'>spin-statistics theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/DHR+superselection+theory'>DHR superselection theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Osterwalder-Schrader+theorem'>Osterwalder-Schrader theorem</a> (<a class='existingWikiWord' href='/nlab/show/Wick+rotation'>Wick rotation</a>)</p>
+</li>
+</ul>
+
+<h3 id='perturbative_qft'>Perturbative QFT</h3>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a></li>
+</ul>
+</div>
+</div>
+</div>
 
 <h1 id='contents'>Contents</h1>
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> a <em>Ward identity</em> expresses the suitable invariant or equivariant of <a class='existingWikiWord' href='/nlab/show/correlator'>correlation functions</a> under some given <a class='existingWikiWord' href='/nlab/show/symmetry'>symmetry</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> a <em>Ward identity</em> expresses the invariance or equivariance of <a class='existingWikiWord' href='/nlab/show/correlator'>correlation functions</a> under some given <a class='existingWikiWord' href='/nlab/show/symmetry'>symmetry</a>.</p>
+
+<p>For a <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a>, the <em>classical Ward identity</em> is an <a class='existingWikiWord' href='/nlab/show/shell'>on-shell</a> <a class='existingWikiWord' href='/nlab/show/equation'>equation</a> satisfied by classical <a class='existingWikiWord' href='/nlab/show/observable'>observables</a> due to <a class='existingWikiWord' href='/nlab/show/symmetry'>symmetries</a> of the <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a>. For quantum observables it is not automatic, but one may consider imposing it as a constraint on the choice of <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>. As such it is called the <em>quantum Ward identity</em> (really a condition). It is closely related to the <a class='existingWikiWord' href='/nlab/show/Schwinger-Dyson+equation'>Schwinger-Dyson equation</a>.</p>
 
 <h2 id='examples'>Examples</h2>
 
@@ -327,9 +680,30 @@ margin-left: 0em;
 
 <p>Named after <em><a class='existingWikiWord' href='/nlab/show/John+Ward'>John Clive Ward</a></em>.</p>
 
+<p>Discussion in the rigorous context of <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a> is in</p>
+
+<ul>
+<li id='DuetschFredenhagen02'>
+<p><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, <a class='existingWikiWord' href='/nlab/show/Klaus+Fredenhagen'>Klaus Fredenhagen</a>, <em>The Master Ward Identity and Generalized Schwinger-Dyson Equation in Classical Field Theory</em>, Commun.Math.Phys. 243 (2003) 275-314 (<a href='https://arxiv.org/abs/hep-th/0211242'>arXiv:hep-th/0211242</a>)</p>
+</li>
+
+<li id='Duetsch18'>
+<p><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, chapter 4 of <em><a class='existingWikiWord' href='/nlab/show/From+classical+field+theory+to+perturbative+quantum+field+theory'>From classical field theory to perturbative quantum field theory</a></em>, 2018</p>
+</li>
+</ul>
+
+<p>See also</p>
+
 <ul>
 <li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Ward%E2%80%93Takahashi_identity'>Ward-Takahashi identity</a></em></li>
 </ul>
+
+<p>
+</p>
+
+<p>
+ 
+</p>
 
 <p>
  
@@ -337,14 +711,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 16, 2017 23:14:07 
+  Revised on January  7, 2018 05:03:37 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.50.90)
+  (84.63.72.123)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Ward+identity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ward+identity/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Ward+identity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ward+identity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Ward+identity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ward+identity/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Ward+identity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ward+identity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
