--- a/pages/10374.html
+++ b/pages/10374.html
@@ -683,8 +683,16 @@ margin-left: 0em;
 <p>Discussion in the rigorous context of <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a> is in</p>
 
 <ul>
+<li id='DuetschBoas02'>
+<p><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, F.-M. Boas, <em>The Master Ward Identity</em>, Rev. Math. Phys 14, (2002) 977-1049 (<a href='http://cds.cern.ch/record/526377/files/0111101.pdf'>pdf</a>)</p>
+</li>
+
 <li id='DuetschFredenhagen02'>
 <p><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, <a class='existingWikiWord' href='/nlab/show/Klaus+Fredenhagen'>Klaus Fredenhagen</a>, <em>The Master Ward Identity and Generalized Schwinger-Dyson Equation in Classical Field Theory</em>, Commun.Math.Phys. 243 (2003) 275-314 (<a href='https://arxiv.org/abs/hep-th/0211242'>arXiv:hep-th/0211242</a>)</p>
+</li>
+
+<li>
+<p>Ferdinand Brennecke, <a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, <em>Removal of violations of the Master Ward Identity</em>, in perturbative QFT, Rev.Math.Phys. 20 (2008) 119-172 (<a href='https://arxiv.org/abs/0705.3160'>arXiv:https://arxiv.org/abs/0705.3160</a>)</p>
 </li>
 
 <li id='Duetsch18'>
@@ -711,14 +719,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  7, 2018 05:03:37 
+  Revised on January  7, 2018 13:59:44 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (84.63.72.123)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Ward+identity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ward+identity/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Ward+identity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ward+identity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Ward+identity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ward+identity/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Ward+identity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ward+identity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
