--- a/pages/9426.html
+++ b/pages/9426.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -434,17 +434,17 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>Fermat curve</em> is a projective <a class='existingWikiWord' href='/nlab/show/algebraic+curve'>algebraic curve</a> over a <a class='existingWikiWord' href='/nlab/show/ground+ring'>ground field</a> <math class='maruku-mathml' display='inline' id='mathml_0e4938c4ad3aeff4c200ce9488f74cd5a35eb1e3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math> given by the Fermat equation</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0e4938c4ad3aeff4c200ce9488f74cd5a35eb1e3_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>x</mi> <mi>n</mi></msup><mo>+</mo><msup><mi>y</mi> <mi>n</mi></msup><mo>=</mo><msup><mi>z</mi> <mi>n</mi></msup><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<p>The <em>Fermat curve</em> is a projective <a class='existingWikiWord' href='/nlab/show/algebraic+curve'>algebraic curve</a> over a <a class='existingWikiWord' href='/nlab/show/ground+ring'>ground field</a> <math class='maruku-mathml' display='inline' id='mathml_07066f0362b4c15858796f3d5931e6f958e67339_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math> given by the Fermat equation</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_07066f0362b4c15858796f3d5931e6f958e67339_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>x</mi> <mi>n</mi></msup><mo>+</mo><msup><mi>y</mi> <mi>n</mi></msup><mo>=</mo><msup><mi>z</mi> <mi>n</mi></msup><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
   x^n + y^n = z^n
   \,,
 
 </annotation></semantics></math></div>
-<p>where <math class='maruku-mathml' display='inline' id='mathml_0e4938c4ad3aeff4c200ce9488f74cd5a35eb1e3_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> is a positive <a class='existingWikiWord' href='/nlab/show/integer'>integer</a> greater or equal <math class='maruku-mathml' display='inline' id='mathml_0e4938c4ad3aeff4c200ce9488f74cd5a35eb1e3_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>.</p>
+<p>where <math class='maruku-mathml' display='inline' id='mathml_07066f0362b4c15858796f3d5931e6f958e67339_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> is a positive <a class='existingWikiWord' href='/nlab/show/integer'>integer</a> greater or equal <math class='maruku-mathml' display='inline' id='mathml_07066f0362b4c15858796f3d5931e6f958e67339_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>.</p>
 
-<p><em>Fermat’s last theorem</em> is the statement, that for <math class='maruku-mathml' display='inline' id='mathml_0e4938c4ad3aeff4c200ce9488f74cd5a35eb1e3_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>&gt;</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>n\gt 2</annotation></semantics></math> this equation has no solutions in rationals (or, equivalently, has no solutions in integers). In other words, the Fermat’s curve has no <math class='maruku-mathml' display='inline' id='mathml_0e4938c4ad3aeff4c200ce9488f74cd5a35eb1e3_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℚ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{Q}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/rational+point'>rational points</a>.</p>
+<p><em>Fermat’s last theorem</em> is the statement, that for <math class='maruku-mathml' display='inline' id='mathml_07066f0362b4c15858796f3d5931e6f958e67339_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>&gt;</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>n\gt 2</annotation></semantics></math> this equation has no solutions in rationals (or, equivalently, has no solutions in integers), other than when at least one of <math class='maruku-mathml' display='inline' id='mathml_07066f0362b4c15858796f3d5931e6f958e67339_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>,</mo><mi>y</mi></mrow><annotation encoding='application/x-tex'>x,y</annotation></semantics></math> or <math class='maruku-mathml' display='inline' id='mathml_07066f0362b4c15858796f3d5931e6f958e67339_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>z</mi></mrow><annotation encoding='application/x-tex'>z</annotation></semantics></math> vanishes. In other words, the Fermat curves with <math class='maruku-mathml' display='inline' id='mathml_07066f0362b4c15858796f3d5931e6f958e67339_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>&gt;</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>n\gt 2</annotation></semantics></math> have no nontrivial <math class='maruku-mathml' display='inline' id='mathml_07066f0362b4c15858796f3d5931e6f958e67339_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℚ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{Q}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/rational+point'>rational points</a>. For <math class='maruku-mathml' display='inline' id='mathml_07066f0362b4c15858796f3d5931e6f958e67339_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>n=2</annotation></semantics></math>, the Fermat curve is just the <a class='existingWikiWord' href='/nlab/show/projective+line'>projective line</a> <math class='maruku-mathml' display='inline' id='mathml_07066f0362b4c15858796f3d5931e6f958e67339_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℙ</mi> <mn>1</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{P}^1</annotation></semantics></math>, hence is much less interesting.</p>
 
-<p>Famously a <a class='existingWikiWord' href='/nlab/show/proof'>proof</a> of this theorem had been announced by <a class='existingWikiWord' href='/nlab/show/Pierre+de+Fermat'>Pierre de Fermat</a>, but no proof was recorded before <a class='existingWikiWord' href='/nlab/show/Andrew+Wiles'>Andrew Wiles</a> with aid of <a class='existingWikiWord' href='/nlab/show/Richard+Taylor'>Richard Taylor</a> proved the <a class='existingWikiWord' href='/nlab/show/Taniyama-Shimura+conjecture'>Taniyama-Shimura modularity conjecture</a>, which by <a class='existingWikiWord' href='/nlab/show/Ribet%27s+theorem'>Ribet&#39;s theorem</a> implies Fermat’s last theorem (see <a class='existingWikiWord' href='/nlab/show/Wiles%27+proof+of+Fermat%27s+last+theorem'>Wiles&#39; proof of Fermat&#39;s last theorem</a>).</p>
+<p>Famously a <a class='existingWikiWord' href='/nlab/show/proof'>proof</a> of this theorem had been announced by <a class='existingWikiWord' href='/nlab/show/Pierre+de+Fermat'>Pierre de Fermat</a>, but no proof was recorded before <a class='existingWikiWord' href='/nlab/show/Andrew+Wiles'>Andrew Wiles</a> with aid of <a class='existingWikiWord' href='/nlab/show/Richard+Taylor'>Richard Taylor</a> proved the <a class='existingWikiWord' href='/nlab/show/Taniyama-Shimura+conjecture'>Taniyama-Shimura modularity conjecture</a> for semistable <a class='existingWikiWord' href='/nlab/show/elliptic+curve'>elliptic curves</a>, which by <a class='existingWikiWord' href='/nlab/show/Ribet%27s+theorem'>Ribet&#39;s theorem</a> implies Fermat’s last theorem (see <a class='existingWikiWord' href='/nlab/show/Wiles%27+proof+of+Fermat%27s+last+theorem'>Wiles&#39; proof of Fermat&#39;s last theorem</a>).</p>
 
 <p>Therefore, while Fermat’s theorem is generally accepted as proven now, the methods used in the proof go far beyond the mathematics known at <a class='existingWikiWord' href='/nlab/show/Pierre+de+Fermat'>Pierre de Fermat</a>’s time. Moreover <a class='existingWikiWord' href='/nlab/show/Ribet%27s+theorem'>Ribet&#39;s theorem</a> and the <a class='existingWikiWord' href='/nlab/show/Taniyama-Shimura+conjecture'>modularity theorem</a> are major conceptual statements in <a class='existingWikiWord' href='/nlab/show/arithmetic+geometry'>arithmetic geometry</a>, quite different in character from the content of Fermat’s last theorem in itself:</p>
 
@@ -452,7 +452,7 @@ margin-left: 0em;
 <p>I confess that Fermat’s Last Theorem, as an isolated proposition, has very little interest for me, because I could easily lay down a multitude of such propositions, which one could neither prove nor dispose of. (<a class='existingWikiWord' href='/nlab/show/Carl+Gauss'>Carl Friedrich Gauss</a>, quoted in J. R. Newman (ed.) <em>The World of Mathematics</em> (1956))</p>
 </blockquote>
 
-<p>It is open whether there exists a more direct proof.</p>
+<p>It is open whether there exists a more direct proof, in particular a proof using only some system of arithmetic. Harvey Friedman has gone so far as to conjecture (his ‘Grand Conjecture’) that <a class='existingWikiWord' href='/nlab/show/elementary+function+arithmetic'>Elementary Function Arithmetic</a> should be enough to prove FLT, among many other ‘finitary’ major theorems in mathematics).</p>
 
 <h2 id='references'>References</h2>
 
@@ -476,14 +476,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  8, 2018 07:03:17 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (84.63.72.123)
+  Revised on January  8, 2018 16:08:46 
+  by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
+  (218.215.43.154)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Fermat+curve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fermat+curve/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Fermat+curve" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fermat+curve" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Fermat+curve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fermat+curve/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Fermat+curve" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fermat+curve" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
